--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: "3.4"
 
 x-app: &app
-  image: kindle-formatter:1.0.0
+  image: kindle-formatter:1.0.2
   build:
     context: .
   volumes:
-    - .:/usr/src/app:cached
-    - node_modules:/usr/src/app/node_modules
+    - .:/usr/src/app
+    - ./node_modules:/usr/src/app/node_modules
   stdin_open: true
   tty: true
 
@@ -20,8 +20,3 @@ services:
     <<: *app
     entrypoint: ""
     command: /bin/bash
-
-volumes:
-  db_data:
-  gem_cache:
-  node_modules:
