--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
   "name": "kindle-formatter",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "scripts": {
     "dev": "next",
     "build": "next build",
     "start": "next start -p $PORT"
   },
   "dependencies": {
+    "eslint-config-next": "^13.4.16",
     "eslint-loader": "^4.0.2",
     "mustache": "^4.0.1",
-    "next": "12",
-    "react": "^17",
-    "react-dom": "^17",
+    "next": "^13.4.16",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-is": "^17",
-    "styled-components": "^5.0.0",
+    "styled-components": "^6.0.7",
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "babel-plugin-styled-components": "^1.8.0",
     "eslint": "^7.3.1",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.21.2",
